@@ -46,6 +46,9 @@
 		<string id="IDS_CLIP_NOTEXT" value="剪贴板上没有文本内容"/>
 		<string id="IDS_COCREATEGUID_FAIL" value="创建GUID失败"/>
 	</module>
+	<module name="LogManager">
+		<string id="IDS_ASSERTION_FAILED" value="程序发生断言错误"/>
+	</module>
 	<module name="PluginManager">
 		<string id="IDS_INITPLUGIN_FAIL" value="初始化插件失败"/>
 	</module>
