@@ -1,5 +1,9 @@
 X3 C++ PluginFramework
 
+2011-02-21
+
+    * Replace "\n" to "\\n " in LogWriter plugin. Add replace function in ctrim.h
+
 ------v1.0.7------
 
 2011-02-18
